feat: can display custom UI

--- a/RecipeManagement/src/RecipeManagement/RecipeManagement.csproj
+++ b/RecipeManagement/src/RecipeManagement/RecipeManagement.csproj
@@ -58,6 +58,9 @@
     
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="CustomUI\index.html" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\SharedKernel\SharedKernel.csproj" />
