--- a/RecipeManagement/src/RecipeManagement/RecipeManagement.csproj
+++ b/RecipeManagement/src/RecipeManagement/RecipeManagement.csproj
@@ -59,7 +59,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="CustomUI\index.html" />
+    <EmbeddedResource Include="CustomUI\**" />
   </ItemGroup>
 
   <ItemGroup>
